added scripts + cast state image generation + random fix